ideascube (0.7.2-dev) unstable; urgency=low

  * Read all file for sniffing dialect in import_medias (fix #45)

 -- Yohan Boniface <hi@yohanboniface.me>  Sat, 15 Dec 2015 19:15:27 +0100

ideascube (0.7.1-1) unstable; urgency=low

  * Burundi ideasbox configuration changes

 -- Yohan Boniface <hi@yohanboniface.me>  Sat, 15 Dec 2015 11:25:27 +0100

ideascube (0.7.0-1) unstable; urgency=low

  * Added Somali, Amharic, Kirundi, Bambara and Swahili supported languages
  * Added command for importing data from mysql of legacy ideasbox servers (Burundi)
  * added "phone" and "email" fields to User model (migrate needed)
  * added --dry-run option to import_medias command
  * optimized file import on import_medias command
  * added "all users" and "new user" action to user detail page
  * optimized build process (upgraded pip to use cache and added wheel option)
  * added search form in media center home page
  * fixed WPA2 network connection (cf #231)
  * fixed bad username displayed in set_password view header
  * added "show password" button near login password field (cf #236)
  * prevent migrate command to delete search index (cf #234)
  * always display download button in document page (fix #238)
  * add a "add stock item" link in each module header
  * fix missing power management home card for ideasbox
  * fix bad slug theme for document in global search
  * fix pagination reseting querystring (cf #241)

 -- Yohan Boniface <hi@yohanboniface.me>  Sat, 5 Dec 2015 11:25:27 +0100

ideascube (0.6.0-1) unstable; urgency=low

  * services are now using systemd (https://github.com/ideascube/ideascube/pull/213)
  * conf is factorized (https://github.com/ideascube/ideascube/pull/217)
  * upgraded django-taggit to 0.17.5
  * added conf for Ethiopian boxes and new Jordan one

 -- Yohan Boniface <hi@yohanboniface.me>  Sat, 28 Nov 2015 11:25:27 +0100

ideascube (0.5.0-1) unstable; urgency=low

  * wifi management [#197](https://github.com/ideascube/ideascube/pull/197)